--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/randomData.js"></script>
         <script src="js/realData.js"></script>
+        <script src="js/util.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
