--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/index.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -23,11 +24,28 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+
+        <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">Shaohua</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+
+          <div class="starter-template">
+          </div>
+          <div class="d3 row">
+          </div>
+
+        </div><!-- /.container -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
         <script src="js/plugins.js"></script>
         <script src="js/realData.js"></script>
